<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2faef4"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout android:id="@+id/RelativeLayout00"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/personWrapper"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:ems="5"
                    android:visibility="gone"
                    android:hint="@string/persons_to_meet">
                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_person_picker"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/personWrapper"
                android:layout_toRightOf="@+id/personWrapper"
                android:background="@drawable/bluebutton"
                android:layout_marginStart="35dp"
                android:text="@string/person"/>
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/roomWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/room_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="93dp"
                android:ems="5"
                android:inputType="number"
                android:hint="@string/room" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/notesWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/notes_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="165dp"
                android:ems="5"
                android:hint="@string/notes" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dateWrapper"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/date_edittext"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="5"
                        android:hint="@string/date" />
                </android.support.design.widget.TextInputLayout>


            <Button
                    android:id="@+id/btn_date"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/dateWrapper"
                    android:layout_toRightOf="@+id/dateWrapper"
                    android:background="@drawable/calendarblue"
                    android:layout_marginStart="35dp"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/timeWrapper"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/time_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/btn_time"
                    android:ems="5"
                    android:hint="@string/time" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_time"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/timeWrapper"
                android:layout_toRightOf="@+id/timeWrapper"
                android:background="@drawable/timeicon"
                android:layout_marginStart="44dp"/>
        </RelativeLayout>


        <Button
            android:id="@+id/add_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="75dp"
            android:stateListAnimator="@null"
            android:elevation="6dp"
            android:translationZ="4dp"
            android:textColor="#fff"
            android:shadowColor="#6e6c6c"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:background="@drawable/bluebutton"
            android:layout_marginBottom="10dp"
            android:text="save" tools:targetApi="lollipop"/>
    </LinearLayout>

</RelativeLayout>