<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2faef4"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameWrapper"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="5"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/done_button"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/nameWrapper"
                android:layout_toRightOf="@+id/nameWrapper"
                android:background="@drawable/events1"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="40dp"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/dateWrapper"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/date_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="5"
                    android:hint="@string/date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_date"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/dateWrapper"
                android:layout_toRightOf="@+id/dateWrapper"
                android:background="@drawable/calendarblue"
                android:layout_marginStart="40dp"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/RelativeLayout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/timeWrapper"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/time_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="5"
                    android:hint="@string/time" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_time"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_toEndOf="@+id/timeWrapper"
                android:layout_toRightOf="@+id/timeWrapper"
                android:background="@drawable/timeicon"
                android:layout_marginStart="48dp"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adressWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/adress_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="213dp"
                android:ems="5"
                android:hint="@string/address" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:stateListAnimator="@null"
        android:elevation="6dp"
        android:translationZ="4dp"
        android:textColor="#fff"
        android:shadowColor="#6e6c6c"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:background="@drawable/bluebutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:text="@string/save" tools:targetApi="lollipop" />

</RelativeLayout>